--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Plonge dans GitHub !
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>Plonge dans GitHub !</title>
   </head>
   <body>
   
